# FIIT_FA_SP

./: .gitignore  CMakeLists.txt  README.md
allocator/allocator_boundary_tags/: CMakeLists.txt
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_boundary_tags/tests/: CMakeLists.txt  allocator_boundary_tags_tests.cpp
allocator/allocator_buddies_system/: CMakeLists.txt
allocator/allocator_buddies_system/include/: allocator_buddies_system.h
allocator/allocator_buddies_system/src/: allocator_buddies_system.cpp
allocator/allocator_buddies_system/tests/: CMakeLists.txt  allocator_buddies_system_tests.cpp
allocator/allocator_global_heap/: CMakeLists.txt
allocator/allocator_global_heap/include/: allocator_global_heap.h
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_global_heap/tests/: CMakeLists.txt  allocator_global_heap_tests.cpp
allocator/allocator_red_black_tree/: CMakeLists.txt
allocator/allocator_red_black_tree/include/: allocator_red_black_tree.h
allocator/allocator_red_black_tree/src/: allocator_red_black_tree.cpp
allocator/allocator_red_black_tree/tests/: CMakeLists.txt  allocator_red_black_tree_tests.cpp
allocator/allocator_sorted_list/: CMakeLists.txt
allocator/allocator_sorted_list/include/: allocator_sorted_list.h
allocator/allocator_sorted_list/src/: allocator_sorted_list.cpp
allocator/allocator_sorted_list/tests/: CMakeLists.txt  allocator_sorted_list_tests.cpp
arithmetic/big_integer/: CMakeLists.txt
arithmetic/big_integer/include/: big_int.h
arithmetic/big_integer/src/: big_int.cpp
arithmetic/big_integer/tests/: CMakeLists.txt
arithmetic/big_integer/tests/Burnikel_Ziegler_division/: Burnikel_Ziegler_division_tests.cpp  CMakeLists.txt
arithmetic/big_integer/tests/Karatsuba_multiplication/: CMakeLists.txt  Karatsuba_multiplication_tests.cpp
arithmetic/big_integer/tests/Newton_division/: CMakeLists.txt  Newton_division_tests.cpp
arithmetic/big_integer/tests/Schonhage_Strassen_multiplication/: CMakeLists.txt  Schonhage_Strassen_multiplication_tests.cpp
arithmetic/big_integer/tests/big_integer/: CMakeLists.txt  big_integer_tests.cpp
arithmetic/big_integer/tests/trivial_division/: CMakeLists.txt  trivial_division_tests.cpp
arithmetic/big_integer/tests/trivial_multiplication/: CMakeLists.txt  trivial_multiplication_tests.cpp
arithmetic/continued_fraction/: CMakeLists.txt
arithmetic/continued_fraction/include/: continued_fraction.h
arithmetic/continued_fraction/src/: continued_fraction.cpp
arithmetic/fraction/: CMakeLists.txt
arithmetic/fraction/include/: fraction.h
arithmetic/fraction/src/: fraction.cpp
arithmetic/fraction/tests/: CMakeLists.txt  fraction_tests.cpp
associative_container/: CMakeLists.txt
associative_container/hash_table/: CMakeLists.txt
associative_container/hash_table/include/: hash_table.h
associative_container/hash_table/src/: hhh.cpp
associative_container/hash_table/tests/: CMakeLists.txt
associative_container/include/: associative_container.h
associative_container/search_tree/: CMakeLists.txt
associative_container/search_tree/binary_search_tree/: CMakeLists.txt
associative_container/search_tree/binary_search_tree/AVL_tree/: CMakeLists.txt
associative_container/search_tree/binary_search_tree/AVL_tree/include/: AVL_tree.h
associative_container/search_tree/binary_search_tree/AVL_tree/src/: hhh.cpp
associative_container/search_tree/binary_search_tree/AVL_tree/tests/: AVL_tree_tests.cpp  CMakeLists.txt
associative_container/search_tree/binary_search_tree/include/: binary_search_tree.h
associative_container/search_tree/binary_search_tree/red_black_tree/: CMakeLists.txt
associative_container/search_tree/binary_search_tree/red_black_tree/include/: red_black_tree.h
associative_container/search_tree/binary_search_tree/red_black_tree/src/: hhh.cpp
associative_container/search_tree/binary_search_tree/red_black_tree/tests/: CMakeLists.txt  red_black_tree_tests.cpp
associative_container/search_tree/binary_search_tree/scapegoat_tree/: CMakeLists.txt
associative_container/search_tree/binary_search_tree/scapegoat_tree/include/: scapegoat_tree.h
associative_container/search_tree/binary_search_tree/scapegoat_tree/src/: hhh.cpp
associative_container/search_tree/binary_search_tree/scapegoat_tree/tests/: CMakeLists.txt  scapegoat_tree_tests.cpp
associative_container/search_tree/binary_search_tree/splay_tree/: CMakeLists.txt
associative_container/search_tree/binary_search_tree/splay_tree/include/: splay_tree.h
associative_container/search_tree/binary_search_tree/splay_tree/src/: hhh.cpp
associative_container/search_tree/binary_search_tree/src/: hhh.cpp
associative_container/search_tree/binary_search_tree/tests/: CMakeLists.txt  binary_search_tree_tests.cpp
associative_container/search_tree/include/: search_tree.h
associative_container/search_tree/indexing_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_plus_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_star_plus_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_star_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_tree_disk/: CMakeLists.txt
associative_container/search_tree/src/: hhh.cpp
associative_container/src/: hhh.cpp
logger/client_logger/: CMakeLists.txt  set.json
logger/client_logger/include/: client_logger.h  client_logger_builder.h
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/client_logger/tests/: CMakeLists.txt  client_logger_tests.cpp  set.json
logger/server_logger/: CMakeLists.txt
logger/server_logger/include/: server_logger.h  server_logger_builder.h
logger/server_logger/src/: server_logger.cpp  server_logger_builder.cpp
logger/server_logger/tests/: CMakeLists.txt  server.cpp  server.h  server_logger_tests.cpp
(+46 files in other folders)
